@@ -1,9 +1,5 @@
 <h1 ma-tr="dashboards.v3.dox.buildPointArray"></h1>
-<<<<<<< HEAD
-<p>This is a more advanced example shonowing how to use the angular material chips components combined with
-=======
 <p>This is a more advanced example showing how to use the angular material chips components combined with
->>>>>>> origin/2.7.x
 <code>&lt;ma-point-list&gt;</code> to create an editable array of points.</p>
 <dual-pane-editor>
 
