@@ -1,12 +1,7 @@
 <h1 ma-tr="dashboards.v3.dox.switchImage"></h1>
 <p>
-<<<<<<< HEAD
-	<code>&lt;ma-switch-img&gt;</code> extends the basic html image element to allow switching of images based on a point value. You can switch images based on
-	binary, multi-state, string, or just map any value from a data point using <code>src-map</code>.  Use <code>default-src</code> to set the defualt image that will display
-=======
 	<code>&lt;ma-switch-img&gt;</code> extends the basic HTML image element to allow switching of images based on a point value. You can switch images based on
 	binary, multi-state, string, or just map any value from a data point using <code>src-map</code>.  Use <code>default-src</code> to set the default image that will display
->>>>>>> origin/2.7.x
 	if no match is found or the point is disabled.
 </p>
 <dual-pane-editor>
