@@ -9,6 +9,7 @@
 * Disable angular debug info in mdAdmin app and add option to bootstrap
 * Update documentation and add more comments to example code
 * Add single page app template with login page
+* Add some layout examples
 
 *Version 3.0.1*
 * Update demo virtual data sources JSON file
